feat: implement trash, search, and UX improvements
- Soft delete with trash and restore functionality
- Optimistic updates for instant UI feedback
- Real-time sidebar count synchronization
- Global search with case-insensitive partial matching
- Zero-latency pin toggle with smart rollback
- Network-free operations to reduce flickering

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -45,7 +45,8 @@
     "retry": "Retry",
     "edit": "edit",
     "loading_data": "Loading data...",
-    "item_count": "{{count}} items"
+    "item_count": "{{count}} items",
+    "no_price": "No price info"
   },
   "dashboard": {
     "all_items": "All Items",
@@ -84,4 +85,7 @@
     "product_not_found": "Product info not found."
   }
 }
+
+
+
 
