--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -45,7 +45,8 @@
     "retry": "再試行",
     "edit": "編集",
     "loading_data": "データを読み込み中...",
-    "item_count": "{{count}}件"
+    "item_count": "{{count}}件",
+    "no_price": "価格情報なし"
   },
   "dashboard": {
     "all_items": "すべての商品",
@@ -84,4 +85,7 @@
     "product_not_found": "商品情報が見つかりません。"
   }
 }
+
+
+
 
