--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -45,7 +45,8 @@
     "retry": "재시도",
     "edit": "edit",
     "loading_data": "데이터를 불러오는 중...",
-    "item_count": "{{count}}개"
+    "item_count": "{{count}}개",
+    "no_price": "가격 정보 없음"
   },
   "dashboard": {
     "all_items": "모든 상품",
@@ -84,4 +85,7 @@
     "product_not_found": "상품 정보를 찾을 수 없습니다."
   }
 }
+
+
+
 
